deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bookstore-app
  namespace: bookstore
  labels:
    app: bookstore-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: bookstore-app-container
          # Will generally get this from a private image repo like ECR (Amazon Elastic Container Registry)
          image: nginx:latest
          resources:
            requests:
              # This specifies the minimum CPU request, set to 30 millicores (m). This means the container needs at least 30/1000 of a CPU core (roughly 3% of a single core).
              cpu: 30m
              # This specifies the minimum memory request, set to 65 Megabytes (Mi).
              memory: 65Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            runAsNonRoot: false
