ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-info-ingress
  namespace: development
spec:
  rules:
    - host: sazzadarr.com
      http:
        paths:
          - path: /
            backend:
             service:
               name: demo-service
               port:
                 number: 80
            pathType: Prefix
